--- a/assets/javascripts/discourse/templates/components/channel-details.hbs
+++ b/assets/javascripts/discourse/templates/components/channel-details.hbs
@@ -41,6 +41,7 @@
   <table>
     <tr>
       <th>{{i18n "chat_integration.rule_table.filter"}}</th>
+      <th>{{i18n "chat_integration.rule_table.style"}}</th>
       <th>{{i18n "chat_integration.rule_table.category"}}</th>
 
       {{#if siteSettings.tagging_enabled}}
