--- a/assets/javascripts/discourse/templates/components/rule-row.hbs
+++ b/assets/javascripts/discourse/templates/components/rule-row.hbs
@@ -3,6 +3,10 @@
 </td>
 
 <td>
+  {{rule.styleName}}
+</td>
+
+<td>
   {{#if isCategory}}
     {{#if rule.category}}
       {{category-link rule.category allowUncategorized="true" link="false"}}
